; ModuleID = '/home/carl/AnghaBench/DOOM/sndserv/extr_wadread.c_getsfx.c'
source_filename = "/home/carl/AnghaBench/DOOM/sndserv/extr_wadread.c_getsfx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"ds%s\00", align 1
@SAMPLECOUNT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getsfx(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca [20 x i8], align 16
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %11 = getelementptr inbounds [20 x i8], [20 x i8]* %10, i64 0, i64 0
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @sprintf(i8* %11, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %12)
  %14 = getelementptr inbounds [20 x i8], [20 x i8]* %10, i64 0, i64 0
  %15 = call i64 @loadlump(i8* %14, i32* %8)
  %16 = inttoptr i64 %15 to i8*
  store i8* %16, i8** %5, align 8
  %17 = load i32, i32* %8, align 4
  %18 = sub nsw i32 %17, 8
  %19 = load i32, i32* @SAMPLECOUNT, align 4
  %20 = sub nsw i32 %19, 1
  %21 = add nsw i32 %18, %20
  %22 = load i32, i32* @SAMPLECOUNT, align 4
  %23 = sdiv i32 %21, %22
  %24 = load i32, i32* @SAMPLECOUNT, align 4
  %25 = mul nsw i32 %23, %24
  store i32 %25, i32* %9, align 4
  %26 = load i8*, i8** %5, align 8
  %27 = load i32, i32* %9, align 4
  %28 = add nsw i32 %27, 8
  %29 = call i64 @realloc(i8* %26, i32 %28)
  %30 = inttoptr i64 %29 to i8*
  store i8* %30, i8** %6, align 8
  %31 = load i32, i32* %8, align 4
  store i32 %31, i32* %7, align 4
  br label %32

32:                                               ; preds = %42, %2
  %33 = load i32, i32* %7, align 4
  %34 = load i32, i32* %9, align 4
  %35 = add nsw i32 %34, 8
  %36 = icmp slt i32 %33, %35
  br i1 %36, label %37, label %45

37:                                               ; preds = %32
  %38 = load i8*, i8** %6, align 8
  %39 = load i32, i32* %7, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i8, i8* %38, i64 %40
  store i8 -128, i8* %41, align 1
  br label %42

42:                                               ; preds = %37
  %43 = load i32, i32* %7, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %7, align 4
  br label %32

45:                                               ; preds = %32
  %46 = load i32, i32* %9, align 4
  %47 = load i32*, i32** %4, align 8
  store i32 %46, i32* %47, align 4
  %48 = load i8*, i8** %6, align 8
  %49 = getelementptr inbounds i8, i8* %48, i64 8
  ret i8* %49
}

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1

declare dso_local i64 @loadlump(i8*, i32*) #1

declare dso_local i64 @realloc(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
